--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+html {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #f7f5ec;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  font-size: 16px;
+  line-height: 2;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 25px 0 0;
+}
+
+.rightPane,
+.leftPane {
+  flex: auto;
+}
+
+.rightPane {
+  max-width: 40vw;
+}
+
+.attributes {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.attributes div {
+  margin: 0 10px 0 0;
+}
+
+.attributeText {
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+
+label {
+  font-size: 16px;
+  margin-right: 5px;
 }
